# bindthem

./: .gitignore  README.md  bindthem.py  requirements.txt  setup.cfg  setup.py
bindthem/: __init__.py
example/: README.md  a2d.hpp  build.sh  build2.sh  demo.py  instantiate.yml  justf.h  myarray.h  myheader.h  relaxation.hpp  setup.py  spmv.cpp  spmv.h  testvectorfunc.py  vectorfunc.h
tests/: test_bind_examples.py
