[metadata]
name = bindthem
version = 0.2.0
description = A simple script for C++ kernels, to find them all and in the darkness bind them (using pybind11).
keywords = C++, pybind11, python
author = Luke Olson
author_email = luke.olson@gmail.com
maintainer = Luke Olson
maintainer_email = luke.olson@gmail.com
url = https://github.com/lukeolson/bindthem
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: X11 Applications
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: C++
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Education',
    Topic :: Scientific/Engineering',
    Topic :: Scientific/Engineering :: Mathematics',
    Topic :: Software Development :: Libraries :: Python Modules',

[options]
platforms = any
zip_safe = False
include_package_data = False
packages = find:
python_requires = >=3.6
setup_requires =
    numpy
    pybind11
install_requires =
    numpy
    pybind11
    pyyaml
    CppHeaderParser
    pytest>=2
